Update sequenceCommons 2019.06